--- a/calculator.html
+++ b/calculator.html
@@ -50,5 +50,12 @@
     </div>
     </form>
 </section>
+<script>
+  let inp=  document.getElementById("cal")
+    .addEventListener("keypress",function(){
+    
+    })
+
+</script>
 </body>
 </html>
